[package]
name = "binance-bot"
version = "0.1.0"
authors = ["Pedro Paulo de Amorim <pp.amorim@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
binance = { git = "https://github.com/ppamorim/binance-rs.git" }
serde = "1.0"
atomic_float = "0.1.0"